--- a/pom.xml
+++ b/pom.xml
@@ -27,14 +27,20 @@
             <groupId>org.hsqldb</groupId>
             <artifactId>sqltool</artifactId>
             <version>2.0.0</version>
-            <scope>test</scope>
+            <type>jar</type>
         </dependency>
 
 	<dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
-            <scope>test</scope>
+	    <type>jar</type>
+	</dependency>
+        <dependency>
+            <groupId>fr.univjfc.bastide</groupId>
+            <artifactId>SimpleJDBCEnonceMaven</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>jar</type>
         </dependency>
     </dependencies>
 
